--- a/index.html
+++ b/index.html
@@ -1,33 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
+<html>
 
-<title>Gateway - UNC Foundation</title>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <head>
+    <title>Home - UNC Foundation</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="TRPG">
+    <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet"
+      href="https://www.w3schools.com/lib/w3-colors-flat.css">
+    <link rel="icon" href="../favicon.ico">
 
-<link rel="stylesheet" href="./style.css">
-<style>
-body, h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-</style>
+    <style>
+  body, html {height: 100%}
+  .bgimg {
+    background-image: url(material/bg2.png);
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+  </style>
 
-</head>
+  </head>
 
-<body>
+  <body style="background-color: #0B193C;">
 
-<div id="particles-js">
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-row w3-middle"><a href="main.html" class="w3-text-white">The UNC Foundation</a></h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-animate-bottom w3-large w3-center w3-text-white">Nullify the Unnatural Chaos</p>
-  </div>
-</div>
+    <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
-<script src="particles.js-master/particles.js"></script>
-<script src="particles.js-master/demo/js/app.js"></script>
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <p class="w3-display-middle"></p>
+      </div>
 
-</body>
+      <div
+        class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <p class="w3-display-middle"></p>
+      </div>
+
+      <div
+        class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <p class="w3-display-middle"></p>
+      </div>
+
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <p class="w3-display-middle"></p>
+      </div>
+
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <p class="w3-display-middle"></p>
+      </div>
+
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <p class="w3-display-middle"></p>
+      </div>
+
+    </div>
+
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+      <div class="w3-display-topleft" style="margin-left: 5%;">
+        <br><br><br>
+        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
+            href="unc/EN/index.html">UNC</a></p>
+        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
+            href="rag/index.html">Ragnarok</a></p>
+      </div>
+    </div>
+
+  </body>
 </html>
