--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             href="rag/index.html">Ragnarok</a></p>
         <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
             href="dipsin/index.html">Dip Sin - SM3611</a></p>
+        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
+            href="prsk_counter/songScore.html">プロセカ Counter</a></p>
       </div>
     </div>
 
