--- a/prsk_counter/songScore.html
+++ b/prsk_counter/songScore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Song-to-Score Counter</title>
+    <title>プロセカ Counter</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -82,7 +82,7 @@
 </head>
 <body>
 
-<h1>プロセカ ランキング カウンタ</h1>
+<h1>プロセカ Ranking Counter</h1>
 
 <label for="requiredScore">Required Score:</label>
 <input type="number" id="requiredScore" placeholder="Enter required score" />
