--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
     <div class="projects-grid">
         <!-- Project 1.1 - UNC Foundation (Ongoing) -->
         <div class="project-card">
-            <div class="card-image">
-                <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="The UNC Foundation Project">
-            </div>
-            <div class="card-content">
-                <h3>The UNC Foundation Databases</h3>
-                <p>Nullify the Unnatural Chaos - One of the various forces in the TRPG worldview</p>
-                <a href="unc/EN/index.html" class="card-link">View Project <i class="fas fa-arrow-right"></i></a>
-            </div>
+            <a href="unc/EN/index.html" class="card-link-wrapper">
+                <div class="card-image">
+                    <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="The UNC Foundation Project">
+                </div>
+                <div class="card-content">
+                    <h3>The UNC Foundation Databases</h3>
+                    <p>Nullify the Unnatural Chaos - One of the various forces in the TRPG worldview</p>
+                    <span class="card-link">View Project <i class="fas fa-arrow-right"></i></span>
+                </div>
+            </a>
             <div class="status-indicator status-ongoing" title="Ongoing Project"></div>
         </div>
 
@@ -57,40 +59,46 @@
 
         <!-- Project 2 - Dip Sin (Abandon) -->
         <div class="project-card">
-            <div class="card-image">
-                <img src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Dip Sin Project">
-            </div>
-            <div class="card-content">
-                <h3>Dip Sin</h3>
-                <p>SM3611 - Audiovisual installation project</p>
-                <a href="dipsin/index.html" class="card-link">View Project <i class="fas fa-arrow-right"></i></a>
-            </div>
+            <a href="dipsin/index.html" class="card-link-wrapper">
+                <div class="card-image">
+                    <img src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Dip Sin Project">
+                </div>
+                <div class="card-content">
+                    <h3>Dip Sin</h3>
+                    <p>SM3611 - Audiovisual installation project</p>
+                    <span class="card-link">View Project <i class="fas fa-arrow-right"></i></span>
+                </div>
+            </a>
             <div class="status-indicator status-abandon" title="Abandoned Project"></div>
         </div>
 
         <!-- Project 3 - Counter (Finish) -->
         <div class="project-card">
-            <div class="card-image">
-                <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Project Sekai Counter">
-            </div>
-            <div class="card-content">
-                <h3>プロセカ Counter</h3>
-                <p>Interactive tracking tool for rhythm game enthusiasts</p>
-                <a href="prsk_counter/songScore.html" class="card-link">View Project <i class="fas fa-arrow-right"></i></a>
-            </div>
+            <a href="prsk_counter/songScore.html" class="card-link-wrapper">
+                <div class="card-image">
+                    <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Project Sekai Counter">
+                </div>
+                <div class="card-content">
+                    <h3>プロセカ Counter</h3>
+                    <p>Interactive tracking tool for rhythm game enthusiasts</p>
+                    <span class="card-link">View Project <i class="fas fa-arrow-right"></i></span>
+                </div>
+            </a>
             <div class="status-indicator status-finish" title="Finished Project"></div>
         </div>
 
         <!-- Project 4 - Lecture (Finish) -->
         <div class="project-card">
-            <div class="card-image">
-                <img src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Lecture Series">
-            </div>
-            <div class="card-content">
-                <h3>Lecture Repository</h3>
-                <p>Personal repository for college lecture files and revision materials</p>
-                <a href="lecture/index.html" class="card-link">View Lectures <i class="fas fa-arrow-right"></i></a>
-            </div>
+            <a href="lecture/index.html" class="card-link-wrapper">
+                <div class="card-image">
+                    <img src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Lecture Series">
+                </div>
+                <div class="card-content">
+                    <h3>Lecture Repository</h3>
+                    <p>Personal repository for college lecture files and revision materials</p>
+                    <span class="card-link">View Lectures <i class="fas fa-arrow-right"></i></span>
+                </div>
+            </a>
             <div class="status-indicator status-finish" title="Finished Project"></div>
         </div>
     </div>
